--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -5,6 +5,13 @@
   height: 100%;
 }
 
+.page__body {
+  picture,
+  source {
+    display: contents;
+  }
+}
+
 .page__wrapper {
   display: flex;
   flex-direction: column;
