--- a/source/styles/blocks/additionally.scss
+++ b/source/styles/blocks/additionally.scss
@@ -284,6 +284,7 @@
     grid-row: 2/ 3;
     width: 245px;
     padding: 72px 0 34px;
+    background-image: url("../../images/background/present-bg-desktop@1x.png");
 
     &::before {
       top: 58px;
