Прописывает недостающие состояния интерактивных элементов

--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -42,6 +42,7 @@
 
     &:active,
     &:focus-visible {
+      color: $base-text-pressed;
       background-color: $btn-secondary-pressed;
     }
   }
