--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -47,7 +47,7 @@ $btn-base-hover: #5eaa2f;
 $btn-base-pressed: #5eaa2f;
 
 $btn-secondary: #f2f2f2;
-$btn-secondary-hover: #ebebeb;
+$btn-secondary-hover: #d9d9d9;
 $btn-secondary-pressed: #ebebeb;
 
 $btn-disabled: #f2f2f2;
