--- a/source/styles/blocks/additionally.scss
+++ b/source/styles/blocks/additionally.scss
@@ -101,7 +101,7 @@
   display: grid;
   grid-template-columns: 280px;
   width: 280px;
-  padding: 13px 0 18px;
+  padding: 8px 0 19px;
   margin: 0;
   border-top: 1px solid $border-base;
   box-sizing: border-box;
@@ -133,13 +133,25 @@
 
 .additionally__link {
   display: grid;
-  width: 100%;
-  margin: 0;
-  margin-bottom: 13px;
+  padding: 5px 10px 5px 0;
+  width: 135px;
+  margin: 0 0 7px;
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.8;
+    transition: 0.3s ease;
+  }
+
+  &:active,
+  &:focus-visible {
+    opacity: 0.6;
+    transition: 0.3s ease;
+  }
 
   @media (min-width: $tablet-width) {
     width: 200px;
+    padding: 0;
     margin: 0;
   }
 }
