--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -125,6 +125,13 @@
     margin-bottom: 14px;
   }
 
+  &:hover,
+  &:active,
+  &:focus-visible {
+    opacity: 0.8;
+    transition: 0.3s ease;
+  }
+
   @media (min-width: $tablet-width) {
     &--image {
       grid-column: 1/ 2;
