--- a/source/styles/blocks/additionally.scss
+++ b/source/styles/blocks/additionally.scss
@@ -261,7 +261,7 @@
   padding: 187px 0 33px;
   margin: 0;
   background-color: $bg-accent;
-  background-image: url("../../images/background/present-bg-mobile@1x.png");
+  background-image: image-set("../../images/background/present-bg-mobile@1x.png" 1x type("image/png"), "../../images/background/present-bg-mobile@2x.png" 2x type("image/png"));
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -283,7 +283,7 @@
     justify-content: flex-end;
     width: 708px;
     padding: 72px 0 59px;
-    background-image: url("../../images/background/present-bg-tablet@1x.png");
+    background-image: image-set("../../images/background/present-bg-tablet@1x.png" 1x type("image/png"), "../../images/background/present-bg-tablet@2x.png" 2x type("image/png"));
 
     &::before {
       top: 59px;
@@ -296,7 +296,7 @@
     grid-row: 2/ 3;
     width: 245px;
     padding: 72px 0 34px;
-    background-image: url("../../images/background/present-bg-desktop@1x.png");
+    background-image: image-set("../../images/background/present-bg-desktop@1x.png" 1x type("image/png"), "../../images/background/present-bg-desktop@2x.png" 2x type("image/png"));
 
     &::before {
       top: 58px;
