--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -112,19 +112,19 @@
   width: 100%;
   height: 362px;
   background-size: cover;
-  background-image: url("../../images/background/map-bg-mobile@1x.png");
+  background-image: image-set("../../images/background/map-bg-mobile@1x.png" 1x type("image/png"), "../../images/background/map-bg-mobile@2x.png" 2x type("image/png"));
   background-position: center;
   background-repeat: no-repeat;
 
   @media (min-width: $tablet-width) {
     height: 100%;
-    background-image: url("../../images/background/map-bg-tablet@1x.png");
+    background-image: image-set("../../images/background/map-bg-tablet@1x.png" 1x type("image/png"), "../../images/background/map-bg-tablet@2x.png" 2x type("image/png"));
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 1 / -1;
     grid-row: 1 / 4;
-    background-image: url("../../images/background/map-bg-desktop@1x.png");
+    background-image: image-set("../../images/background/map-bg-desktop@1x.png" 1x type("image/png"), "../../images/background/map-bg-desktop@2x.png" 2x type("image/png"));
   }
 }
 
