--- a/source/styles/blocks/intro.scss
+++ b/source/styles/blocks/intro.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 302px;
     background-size: contain, 100% 302px, contain;
-    background-image: url("../../images/background/intro-bg-mobile@1x.png"), linear-gradient(to right, #64a73c 14%, #62a53a 68%);
+    background-image: image-set("../../images/background/intro-bg-mobile@1x.png" 1x type("image/png"), "../../images/background/intro-bg-mobile@2x.png" 2x type("image/png")), linear-gradient(to right, #64a73c 14%, #62a53a 68%);
     background-repeat: no-repeat;
     background-position: 50% 0;
   }
@@ -29,7 +29,7 @@
 
     &::before {
       background-color: $bg-image;
-      background-image: url("../../images/background/intro-bg-desktop@1x.png");
+      background-image: image-set("../../images/background/intro-bg-desktop@1x.png" 1x type("image/png"), "../../images/background/intro-bg-desktop@2x.png" 2x type("image/png"));
       background-repeat: no-repeat;
       background-size: 1040px 694px;
       width: 50%;
